[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/user interface/backgrounds/GameOver.png" type="Texture" id=1]
[ext_resource path="res://assets/user interface/themes/AlloyInk-lgdWw.otf" type="DynamicFontData" id=2]
[ext_resource path="res://src/screens/GameOverScreen.gd" type="Script" id=3]
[ext_resource path="res://src/user interface/ChangeSceneButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/user interface/themes/main_theme.tres" type="Theme" id=5]
[ext_resource path="res://src/user interface/MenuButton.gd" type="Script" id=9]
[ext_resource path="res://src/user interface/RestartButton.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=2]
size = 70
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MenuContainer/Menu1/ScoreNumber:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MenuContainer/Menu1/ScoreText:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "show_bubbles_saved_text"
length = 0.8

[sub_resource type="Animation" id=5]
resource_name = "show_score_text"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("MenuContainer/Menu1/ScoreNumber:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MenuContainer/Menu1/ScoreText:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="GameOverScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="MenuContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.549479
anchor_right = 0.5
anchor_bottom = 0.549479
margin_left = -457.0
margin_top = -400.0
margin_right = 457.0
margin_bottom = 180.0
custom_constants/separation = 100
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Menu1" type="HBoxContainer" parent="MenuContainer"]
margin_right = 914.0
margin_bottom = 70.0
alignment = 1

[node name="ScoreText" type="Label" parent="MenuContainer/Menu1"]
margin_left = 455.0
margin_right = 455.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 2 )
align = 1
percent_visible = 0.0

[node name="ScoreNumber" type="Label" parent="MenuContainer/Menu1"]
margin_left = 459.0
margin_right = 459.0
margin_bottom = 70.0
custom_colors/font_color = Color( 1, 0.8, 0, 1 )
custom_fonts/font = SubResource( 2 )
align = 1
percent_visible = 0.0

[node name="Menu2" type="VBoxContainer" parent="MenuContainer"]
margin_left = 307.0
margin_top = 170.0
margin_right = 607.0
margin_bottom = 580.0
size_flags_horizontal = 4
size_flags_vertical = 3
custom_constants/separation = 15

[node name="RestartButton" parent="MenuContainer/Menu2" instance=ExtResource( 4 )]
margin_right = 300.0
margin_bottom = 197.0
rect_pivot_offset = Vector2( 200, 100 )
text = "RICOMINCIA"
script = ExtResource( 10 )

[node name="MenuButton" parent="MenuContainer/Menu2" instance=ExtResource( 4 )]
margin_top = 212.0
margin_right = 300.0
margin_bottom = 410.0
rect_pivot_offset = Vector2( 200, 100 )
text = "MENU PRINCIPALE"
script = ExtResource( 9 )
next_scene_path = "res://src/screens/MenuScreen.tscn"

[node name="TextAnimations" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/show_bubbles_saved_text = SubResource( 4 )
anims/show_score_text = SubResource( 5 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="MenuContainer/Menu2/RestartButton" to="MenuContainer/Menu2/RestartButton" method="_on_RestartButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
